# AgXR

./: .gitignore  AgXR.sln  Directory.Build.props  build_log.txt  build_log_2.txt  build_log_3.txt  crash_log.txt  geotags.db3
.claude/: settings.local.json
AgXR.App/: AgXR.App.csproj  AndroidManifest.xml  GeminiLiveClient.cs  MainActivity.cs  SavedTagsActivity.cs
AgXR.App/Data/: GeoTagDatabase.cs
AgXR.App/Models/: GeoTag.cs
AgXR.App/Resources/layout/: activity_main.xml  activity_saved_tags.xml  geotag_item.xml
AgXR.App/Resources/values/: strings.xml  styles.xml
AgXR.App/Services/: ArRenderer.cs  GeoTagService.cs
AgXR.Native/: build.gradle.kts  local.properties  log.txt  settings.gradle.kts
AgXR.Native/src/main/cpp/: CMakeLists.txt  vision_module.cpp
